<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeMyMifi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_off_">" OFF "</string>
    <string name="check_credit">Check credit</string>
    <string name="_on_">" ON "</string>
    <string name="clients_">Clients:</string>
    <string name="out_in_">"Out/in: "</string>
    <string name="mobile_data_">Mobile data:</string>
    <string name="access_point_">Access point:</string>

</resources>
